--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" loading="lazy">
     <title>itinerary</title>
 </head>
 <body>
     <div style="text-align: center;font-size: larger;">行程安排</div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.160272837154!2d120.47062931501125!3d23.56268658468219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346ebe56d7077847%3A0x1ea97cc03ed110a4!2z5ZyL56uL5Lit5q2j5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1680853886509!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
