--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css" loading="lazy">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>itinerary</title>
 </head>
 <body>
-    <div style="text-align: center;font-size: larger;">行程安排</div>
-    <iframe class="map" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-gRiDopwwgRAXYWOqPF0bRNxwy2lNpvI"></script>
+    <div class="title">Itinerary</div>
+    <br>
+
+    <input type="text" class="search-box" id="search-box" placeholder="輸入地點">
+    <iframe class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.160272837154!2d120.47062931501125!3d23.56268658468219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346ebe56d7077847%3A0x1ea97cc03ed110a4!2z5ZyL56uL5Lit5q2j5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1680853886509!5m2!1szh-TW!2stw">
+    </iframe>
+    <script src="script.js"></script>
 </body>
 </html>
